# spindle

./: Cargo.toml  LICENSE
apps/spindle/: .gitignore  .prettierignore  .prettierrc  package.json  pnpm-lock.yaml  vite.config.ts
apps/spindle/src/: App.vue  main.ts
apps/spindle/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/spindle/src-tauri/src/: db.rs  lib.rs  logger.rs  main.rs  service.rs  spindle_db.md
apps/spindle/src/components/: ThemeToggle.vue
apps/spindle/src/components/services-view/: DummyNode.vue  PendingServicesCard.vue  ServiceDetailModal.vue  ServiceGroupCard.vue  ServiceItem.vue  ToggleButton.vue  TopologyGraph.vue
apps/spindle/src/composables/: useServiceAlias.ts  useServiceTransformer.ts
apps/spindle/src/layouts/: BasicLayout.vue
apps/spindle/src/mocks/: serviceMock.ts
apps/spindle/src/router/: index.ts
apps/spindle/src/services/: service.ts
apps/spindle/src/stores/: serviceStore.ts  tauriStore.ts  themeStore.ts
apps/spindle/src/types/: service.types.ts
apps/spindle/src/utils/: serviceHash.ts  stableHash.ts
apps/spindle/src/views/: GroupPage.vue  ServicesView.vue
apps/spindle/src/views/services-view/: ServiceGroupDetail.vue  ServicesOverview.vue
crates/probe-service/: Cargo.toml
crates/probe-service/src/: main.rs
crates/spindle-core/: Cargo.toml
crates/spindle-core/src/: service.rs  service_REVIEW.md
crates/spindle-util/: Cargo.toml
crates/spindle-util/src/: logger.rs
