[package]
name = "spindle-core"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["cargo", "derive"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = [
    "fs",
    "macros",
    "process",
    "rt-multi-thread",
    "time",
] }
toml = "0.9.10"
tracing = "0.1.44"
rand = "0.9.2"
dashmap = "6.1.0"
tokio-util = "0.7.18"
petgraph = "0.8.3"
